sort.basic.shell.AlgShellSort.scala.error
Compilation error:
AlgShellSort:3: error: ':' expected but ')' found.
  def insertion(ecart){
                     ^AlgShellSort:22: error: identifier expected but '}' found.
}
^